# tt_lazy

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  build.sh  build_debug.sh  build_with_conan.sh  complex_graph.dot  conanfile.py  node-vs-tapeoperation.md  project-structure-review.md  run-clang-tidy.sh  setup.sh  setup_pre_commit.sh
backend/cpu/: reduce_sum.cpp
bindings/: core_types.cpp  operations.cpp  python_bindings.cpp
docs/: graph_visualization.md
docs/dev/architecture/: input-nodes-vs-constant-inputs.md  node-vs-tapeoperation.md
docs/user/: README.md
examples/: graph_visualization_demo.cpp
includes/: Context.hpp  EvaluationManager.hpp  MemoryManager.hpp  Node.hpp  OpArgs.hpp  Tensor.hpp  common.hpp
includes/operations/: operations.hpp
includes/tape/: Tape.hpp  TapeEvaluationManager.hpp  TapeExecutor.hpp  TapeGenerator.hpp  TapeOperation.hpp
math/: CMakeLists.txt  eltwise.cpp  fused_ops.cpp  math_operations.hpp  matmul.cpp  reduce_sum.cpp  split.cpp  test_math_ops.cpp  transpose.cpp
operations/: operations.cpp
src/: Context.cpp  MemoryManager.cpp  Node.cpp  Tensor.cpp
src/backend/cpu/: split.cpp
src/bindings/: operations.cpp  python_bindings.cpp
src/core/: Context.hpp  EvaluationManager.hpp  Tensor.cpp  Tensor.hpp  common.hpp  evaluation_manager.cpp  evaluation_manager.hpp  graph_utils.cpp  graph_utils.hpp  op_args.hpp  shape.cpp  shape.hpp  tensor.cpp  tensor.hpp
src/frontend/: operations.cpp  operations.hpp
src/tape/: OperationHandlers.cpp  Tape.cpp  Tape.hpp  TapeExecutor.cpp  TapeGenerator.cpp
src/tape/passes/: MLPFusionPass.cpp  MLPFusionPass.hpp  TapeOptimizationPass.cpp
tape/: CMakeLists.txt  EvaluationManager.cpp  OperationHandlers.cpp  Tape.cpp  TapeEvaluationManager.cpp  TapeEvaluationManager.hpp  TapeExecutor.cpp  TapeGenerator.cpp  TapeGenerator.hpp
tape/passes/: DeadCodeEliminationPass.cpp  DeadCodeEliminationPass.hpp  MLPFusionPass.cpp  MLPFusionPass.hpp  TapeOptimizationPass.cpp  TapeOptimizationPass.hpp
tests/: README.md
tests/cpp/: test_context.cpp  test_end_to_end.cpp  test_main.cpp  test_mlp_demo.cpp  test_node.cpp  test_operations.cpp  test_tensor.cpp
tests/cpp/benchmarks/: test_mlp_demo.cpp
tests/cpp/integration/: test_end_to_end.cpp  test_operations.cpp
tests/cpp/unit/: test_context.cpp  test_node.cpp  test_tensor.cpp
tests/cpp/unit/math/: test_math_ops.cpp
tests/python/: run_tests.py  test_python_bindings.py
tools/: .pre-commit-config.yaml  requirements-dev.txt  run-clang-tidy.sh  setup.sh
